# pypsrp-cli

./: .gitignore  README.md  pyproject.toml  pypsrp_cli.py
.github/: CODEOWNERS
.github/workflows/: ci-python.yml  release.yml
