# SPDX-FileCopyrightText: 2026 Greenbone AG
#
# SPDX-License-Identifier: GPL-3.0-or-later

# use the same as pypsrp for simplicity
[build-system]
requires = [
    "setuptools >= 77.0.0", # license and license-files alignment
]
build-backend = "setuptools.build_meta"

[project]
name = "pypsrp-cli"
version = "0.1"
description = "CLI for Pypsrp"
readme = "README.md"
requires-python = "<4.0,>=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Olav Lamberts", email = "olav.lamberts@greenbone.net" }
]
keywords = ["winrm", "psrp", "winrs", "windows", "powershell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pypsrp[kerberos] >= 0.9.0"
]

[project.scripts]
pypsrp_cli = "pypsrp_cli:main"

[project.urls]
homepage = "https://github.com/greenbone/pypsrp-cli"

[project.optional-dependencies]
dev = [
    "pypsrp[dev] >= 0.9.0",
    "black >= 25.11.0",
    "autohooks >= 26.2.0",
    "autohooks-plugin-black >= 23.10.0",
    "coverage >= 7.13",
    "ruff >= 0.15.10",
    "autohooks-plugin-ruff >= 25.3.1"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "pypsrp-cli"
version = "0.1.0"
description = "Pypsrp CLI"
authors = ["Greenbone AG <info@greenbone.net>"]

[tool.poetry.dependencies]
python = "<4.0,>=3.10"


[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
autohooks = "^26.2.0"
autohooks-plugin-black = "^23.10.0"
pontos = "^25.8.1"
coverage = "^7.13"
ruff = "^0.15.10"
autohooks-plugin-ruff = "^25.3.1"
